# DialogueSystem

./: .gitignore  CMakeLists.txt  DialogueGraph.h  DialogueParser.h  main.cpp
files/: first.json
